# querysense-pro

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: api.yaml  base.yaml  retrieval.yaml  training.yaml
data/samples/: noisy_queries.csv  sample_products.csv
reports/: search_metrics.json  search_per_query_metrics.csv
scripts/: evaluate_entities.py  evaluate_intent.py  evaluate_normalization.py  evaluate_search.py  extract_entities.py  generate_queries.py  predict_intent.py  prepare_data.py  prepare_intent_dataset.py  recommend_filters.py  search_products.py  search_semantic_products.py  train_intent.py
src/querysense/: config.py
src/querysense/api/: main.py  schemas.py
src/querysense/data/: entity_dataset.py  generate_queries.py  intent_dataset.py  load_products.py  product_schema.py  query_dataset.py
tests/api/: test_intent_api.py
tests/unit/: test_bm25_index.py  test_classification_metrics.py  test_entities.py  test_entity_dataset.py  test_entity_extractor.py  test_entity_metrics.py  test_filter_recommendation.py  test_filter_service.py  test_generate_queries.py  test_intent_dataset.py  test_intent_predictor.py  test_intent_service.py  test_load_products.py  test_normalization_benchmark.py  test_normalizer.py  test_product_filter.py  test_product_ranker.py  test_product_text.py  test_search_evaluator.py  test_search_metrics.py  test_search_relevance.py  test_search_result.py  test_search_service.py  test_semantic_index.py  test_semantic_service.py  test_semantic_text.py  test_text_utils.py  test_train_intent.py
(+24 files in other folders)
