[project]
name = "querysense-pro"
version = "0.1.0"
description = "Production-style e-commerce query understanding and product retrieval system."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Mohamed Abbouda" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false